<resources>
    <string name="app_name" translatable="false">PetInto</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="spa">Spa</string>
    <string name="hotel">Hotel</string>
    <string name="service">Service</string>
    <string name="serviceBookingList">Service booking list</string>
    <string name="profile">Profile</string>
    <string name="details">Details</string>
    <string name="clear_all"><u>Clear all</u></string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="forget_password"><u>Forget your password?</u></string>
    <string name="sign_in">Already have an account?<u><b> Sign in</b></u></string>
    <string name="payment">Payment</string>
    <string name="petinto_address">227 Nguyễn Văn Cừ, Phường 4, Quận 5, TP.HCM</string>
    <string name="pet">Pet</string>
    <string name="welcome_to_petinto">Welcome to PetInto</string>
    <string name="search">Search</string>
    <string name="pet_list">Pet List</string>
    <string name="type_dog">Dog</string>
    <string name="type_cat">Cat</string>
    <string name="type_mouse">Mouse</string>
    <string name="type_rabbit">Rabbit</string>
    <string name="type_bird">Bird</string>
    <string name="type_fish">Fish</string>
    <string name="order_now">Order now</string>
    <string name="accessories">Accessories</string>
    <string name="beauty_spa">Beauty Spa</string>
    <string name="reviews">Reviews</string>
    <string name="customer_review">Now I use PetInto as my favourite shopping app because services on PetInto are numerous.</string>
    <string name="advertisement">Advertisement</string>
    <string name="customer_review_1">PetInto is a fantastic app for pet owners! It offers a wide range of services, including easy-to-use shopping options and helpful pet care tips.</string>
    <string name="customer_review_2">I highly recommend this app for anyone looking to improve their pet ownership experience.</string>
    <string name="add_your_pet">Add Your Pet</string>
    <string name="pet_name">Name</string>
    <string name="pet_type">Type</string>
    <string name="pet_age">Age</string>
    <string name="pet_variety">Variety</string>
    <string name="pet_color">Color</string>
    <string name="pet_weight">Weight</string>
    <string name="pet_vaccine">Number of vaccines</string>
    <string name="pet_gender">Gender: </string>
    <string name="pet_gender_male">Male</string>
    <string name="pet_gender_female">Female</string>
    <string name="pet_gender_other">Other</string>
    <string name="add_pet">ADD PET</string>
    <string name="success_condition">Success</string>
    <string name="sentence_success_condition">Yay. It’s a nice order! It will arrive soon.</string>
    <string name="booking_type">Type: </string>
    <string name="booking_time">Time: </string>
    <string name="booking_details">DETAILS</string>
    <string name="booking_title">Booking</string>
    <string name="booking_detail_title">Booking Details</string>
    <string name="booking_detail_title_pet">PET</string>
    <string name="booking_detail_title_owner">OWNER</string>
    <string name="booking_detail_title_booking">BOOKING</string>
    <string name="booking_detail_title_services">SERVICES</string>
    <string name="booking_detail_none">None</string>
    <string name="booking_pet_id">ID: </string>
    <string name="booking_pet_name">Name: </string>
    <string name="booking_pet_type">Type: </string>
    <string name="booking_owner_phone_number">Phone number</string>
    <string name="booking_owner_email" translatable="false">Email</string>
    <string name="service_booking_details">Service Booking Details</string>
    <string name="booking_detail_hotel">Hotel Booking</string>
    <string name="booking_detail_hotel_id">Booking id: </string>
    <string name="booking_detail_hotel_check_in">Check in: </string>
    <string name="booking_detail_hotel_check_out">Check out: </string>
    <string name="booking_detail_hotel_room">Room: </string>
    <string name="booking_detail_hotel_customer_information">Customer Information</string>
    <string name="booking_detail_hotel_phone_number">Phone number: </string>
    <string name="booking_detail_hotel_customer_email" translatable="false">Email: </string>
    <string name="booking_detail_hotel_pet_information">Pet Information</string>
    <string name="booking_detail_hotel_pet_information_variety">Variety: </string>
    <string name="booking_detail_hotel_pet_information_color">Color: </string>
    <string name="booking_detail_hotel_pet_color">Brown</string>
    <string name="booking_detail_hotel_cancel_booking">CANCEL BOOKING</string>
    <string name="booking_detail_spa">Spa Booking</string>
    <string name="booking_detail_spa_services">Services: </string>
    <string name="nail_cut">Nail cut</string>
    <string name="hair_cut">Hair cut</string>
    <string name="cart">Cart</string>
    <string name="select_all">Select All</string>
    <string name="buy">Buy</string>
    <string name="change_information">Change Information</string>
    <string name="full_name">Full Name</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="customer">Customer</string>
    <string name="save_information">Save Information</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_new_address">Add new address</string>
    <string name="select_default_address">Select Default Address</string>
    <string name="bed">Bed</string>
    <string name="used_for">For: </string>
    <string name="stock">Stock: </string>
    <string name="product_details">Details:</string>
    <string name="contact">Contact</string>
    <string name="vaccine" translatable="false">Vaccine: </string>
    <string name="weight">"Weight (kg): "</string>
    <string name="age">Age: </string>
    <string name="order">Order</string>
    <string name="delivery_address_details">Delivery Address Details</string>
    <string name="address">Address</string>
    <string name="street_name_building_house_no_ward_district_city">Street Name/Building/House No., Ward, District, City</string>
    <string name="set_as_default_address">Set as default address</string>
    <string name="save_address">Save address</string>
    <string name="history">History</string>
    <string name="history_pet">History Pet</string>
    <string name="time">Time</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="booking">BOOKING</string>
    <string name="delete">DELETE</string>
    <string name="filters">Filters</string>
    <string name="your_information">Your Information</string>
    <string name="petinto_address_title">PetInto Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order ID</string>
    <string name="shipment_date">Shipment date</string>
    <string name="order_date">Order date</string>
    <string name="payment_method">Payment method</string>
    <string name="pick_up_at_petinto">Pick up at PetInto</string>
    <string name="customer_information">Customer Information</string>
    <string name="door_to_door_delivery">Door-To-Door Delivery</string>
    <string name="cash">  Cash</string>
    <string name="momo" translatable="false">  Momo</string>
    <string name="notes">Notes</string>
    <string name="notes_for_order">Notes for order</string>
    <string name="purchase">Purchase</string>
    <string name="pet_payment">Pet Payment</string>
    <string name="settings_english">English</string>
    <string name="settings_vietnamese">Vietnamese</string>
    <string name="settings_report_error">Report errors</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="log_out">LOG OUT</string>
    <string name="change_info">Change Info</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="enter_your_email_to_reset_the_password">Enter your Email to reset the password</string>
    <string name="send">SEND</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_title">SIGN IN</string>
    <string name="password">Password</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="confirm_password">Confirm password</string>
    <string name="food">Food</string>
    <string name="amount">Amount: </string>
    <string name="shipping">Shipping</string>
    <string name="quantity">Quantity: </string>
    <string name="status">Status: </string>
    <string name="order_date_title">Order date: </string>
    <string name="on_processing">On Processing</string>
    <string name="service_title">Service: </string>
    <string name="date">Date: </string>
    <string name="customer_information_title">Customer Information: </string>
    <string name="pet_information">Pet Information: </string>
    <string name="please_wait">Please wait ...</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="report_of_petinto">Report</string>
    <string name="we_are_in_the_process_of_developing_and_improving_the_application_please_share_your_feedback_on_your_app_experience_so_that_we_can_address_and_support_it_as_soon_as_possible">We are in the process of developing and improving the application. Please share your feedback on your app experience so that we can address and support it as soon as possible!</string>
    <string name="tell_petinto_about_your_problem">Tell PetInto about your problem</string>
    <string name="edit">Edit</string>
    <string name="room_type">Room type</string>
    <string name="from_date">From date :</string>
    <string name="to_date">To date :</string>
    <string name="total_cost">Total cost:</string>
    <string name="booking_payment">Booking Payment</string>
    <string name="order_history">Order History</string>
    <string name="apply">Apply</string>
    <string name="notification">Notification</string>
    <string name="your_order">Your Order</string>
    <string name="save_pet_information">Save Pet Information</string>
    <string name="type">Type</string>
    <string name="booking_details_pet_name">Pet name:</string>
    <string name="booking_details_pet_genre">Pet genre:</string>
    <string name="booking_detail_pet_weight">Pet weight:</string>
    <string name="success_order">Yay. It’s a nice order! It will arrive soon.</string>
    <string name="failed_order">Something went wrong. Please, try again.</string>
    <string name="missing_delivery_method">Please choose a way to get your items</string>
    <string name="missing_payment_method">Please choose a payment method</string>
    <string name="missing_delivery_address">Please input your delivery address</string>
    <string name="your_address">Your Address</string>
    <string name="missing_petinfo">Please add your pet information at Profile</string>
    <string name="missing_pet_service">Please choose a pet for the service</string>
</resources>