<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item
        android:id="@+id/shoppingFragment"
        android:title="@string/shopping"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item
        android:id="@+id/spaFragment"
        android:title="@string/spa"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item
        android:id="@+id/hotelFragment"
        android:title="@string/hotel"
        android:icon="@drawable/ic_launcher_foreground"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_launcher_foreground"/>

</menu>