<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:id="@+id/itemOrderLayout">

    <ImageView
        android:id="@+id/imgviewOrder"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/shopping"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:background="@color/background_dark"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imgviewOrder"
        app:layout_constraintStart_toStartOf="@+id/imgviewOrder"
        app:layout_constraintTop_toBottomOf="@+id/imgviewOrder">

        <TextView
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            />

        <TextView
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="11.800.000đ"
            android:textSize="17sp"
            />

        <RelativeLayout
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="12sp"
                android:id="@+id/lbCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/pet_gender"
                />

            <TextView
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/lbCondition"
                android:text="@string/pet_gender_female"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="12sp"
                android:id="@+id/lbId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_pet_type"/>

            <TextView
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/lbId"
                android:text="@string/type_dog"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="6dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuy"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:background="@drawable/primary_button_background"
                android:text="@string/buy"
                android:textAllCaps="false"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>