<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.DetailFragment"
    android:background="@color/background_light"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_dark"
        android:paddingHorizontal="9dp"
        android:paddingBottom="9dp"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBackDetail"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="12dp"
            android:contentDescription="@string/shopping"
            android:src="@drawable/exit_icon"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/main_dark"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/shopping"
            android:src="@drawable/cart_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTitleBar"
        >
        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/shopping"
                    android:id="@+id/ivItemDetail"
                    android:layout_centerHorizontal="true"
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:src="@drawable/ic_launcher_background"
                    />
            </RelativeLayout>

            <TableLayout
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:id="@+id/tvItemNameDetailsPet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Golden Dog"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tvItemPriceDetailsPet"
                        android:layout_marginStart="24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="11.800.000đ"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="18sp"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booking_pet_type"
                            />
                        <TextView
                            android:id="@+id/tvTypePet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_dog"
                            android:textStyle="bold"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginStart="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >



                    </LinearLayout>
                </TableRow>
                <TableRow
                    android:layout_marginTop="6dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vaccine"
                            />
                        <TextView
                            android:id="@+id/tvVaccinePet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textStyle="bold"
                           />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginStart="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booking_detail_hotel_pet_information_variety"
                            />
                        <TextView
                            android:id="@+id/tvVarietyPet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Golden"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_marginTop="6dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pet_gender"
                           />
                        <TextView
                            android:id="@+id/tvGenderPet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pet_gender_male"
                            android:textStyle="bold"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginStart="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight"
                            />
                        <TextView
                            android:id="@+id/tvWeightPet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1.5kg"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_marginTop="6dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age"
                           />
                        <TextView
                            android:id="@+id/tvAgePet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textStyle="bold"
                            />


                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginStart="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booking_detail_hotel_pet_information_color"
                            />
                        <TextView
                            android:id="@+id/tvColorPet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booking_detail_hotel_pet_color"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                </TableRow>

            </TableLayout>



            <RelativeLayout
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnOrderPet"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:background="@drawable/primary_button_background"
                        android:text="@string/order"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnContactPet"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/white_button_background"
                        android:text="@string/contact"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/main_dark"

                        />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>